<resources>
    <string name="app_name">MySudokeGame</string>
    <string name="main_title">Sudoku Game</string>
    <string name="New_game_label">New Game</string>
    <string name="Continue_label">Continue</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>

    <string name="about_text">My sudoku Game, like any others SudokuGame Enjoy it</string>
    <string name="hello">Difficulty</string>
    <string name="easy_lable">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="game_title">Game</string>
</resources>